pseudo-backtrace-derive/tests/trybuild/fail/missing_location.stderr
error: missing #[location] attribute or field named `location`
 --> tests/trybuild/fail/missing_location.rs:4:8
  |
4 | struct MissingLocation {
  |        ^^^^^^^^^^^^^^^
